--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,75 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: rgb(40, 40, 40);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.main-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+/*Navbar*/
+nav.navbar{
+  color: white;
+  background-color: rgb(20, 20, 20);
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+}
+
+.nav-link {
+  padding: 5px 10px;
+  margin: 10px 10px;
+}
+
+.nav-link:hover{
+  background-color: rgb(206, 30, 65);
+  border-radius: 0.5rem;
+}
+
+/*Login*/
+
+.login form{
+  color: rgb(240, 240, 240);
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(32, 32, 32);
+  border-radius: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 3rem;
+  margin: 5rem 5rem;
+  
+}
+
+form p{
+  text-align: center;
+  padding-bottom: 1rem;
+}
+
+.login label{
+  color: rgb(240, 240, 240);
+  display: flex;
+  font-weight: 300;
+  font-size: 0.8rem;
+  padding-left: 0.4em;
+  padding-bottom: 0.4em;
+}
+
+.login input{
+  color: rgb(21, 21, 21);
+  display: flex;
+  margin-bottom: 1rem;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.2rem ;
+  max-width: 400px;
+}
+
