--- a/app/globals.css
+++ b/app/globals.css
@@ -3,13 +3,16 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Lavishly+Yours&display=swap');
 
 body {
   background-color: rgb(40, 40, 40);
+  background: linear-gradient(to bottom, #F4002F, #8000ff), black;
+  height: 100vh;
 }
 
 .main-content{
+  
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,7 +22,7 @@ body {
 /*Navbar*/
 nav.navbar{
   color: white;
-  background-color: rgb(20, 20, 20);
+  background-color: rgb(20, 20, 20, 1);
   display: flex;
   flex-direction: row;
   justify-content: right;
@@ -41,7 +44,9 @@ nav.navbar{
   color: rgb(240, 240, 240);
   display: flex;
   flex-direction: column;
-  background-color: rgb(32, 32, 32);
+  background-color: rgb(32, 32, 32, 0.5);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
   border-radius: 1rem;
   justify-content: center;
   align-items: center;
@@ -76,14 +81,30 @@ form p{
   font-weight: 300;
 }
 
+.form-links{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
 .form-link{
-  display: block;
   font-size: small;
 }
 
+.form-link:hover{
+  cursor: pointer;
+  color: rgb(255, 114, 114);
+}
+
 .login-btn{
-  background-color: crimson;
+  background-color: rgb(230, 230, 230);
+  color: black;
   margin-top: 1rem;
   border-radius: 0.5rem;
   padding: 0.3rem 1rem;
+
+  font-family: "Lavishly Yours", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
