--- a/app/globals.css
+++ b/app/globals.css
@@ -11,12 +11,11 @@ body {
   hsl(31, 100%, 59%) 5%,
   hsl(346, 69%, 51%) 55%,
   hsl(240deg 100% 20%) 100%
-);
+  );
   height: 100vh;
 }
 
 .main-content{
-  
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -34,6 +33,7 @@ nav.navbar{
   -webkit-box-shadow:0px 0px 26px 0px #1b1b1b ;
   -moz-box-shadow:0px 0px 26px 0px #1b1b1b ;
   box-shadow:0px 0px 26px 0px #1b1b1b ;
+  height: 10vh;
 }
 
 .nav-link {
@@ -62,6 +62,8 @@ nav.navbar{
   display: flex;
   align-items: center;
   justify-content: center;
+  user-select: none;
+  height: 90vh;
 }
 
 .login-left{
@@ -83,8 +85,7 @@ nav.navbar{
 .login .intro{
   color: white;
   text-align: start;
-  padding: 0px 30px;
-  margin-left: 20px;
+  margin-left: 5vw;
 }
 
 
@@ -95,18 +96,18 @@ nav.navbar{
   background-color: rgb(32, 32, 32, 0.5);
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
-  border-radius: 1rem;
   justify-content: center;
   align-items: center;
-  padding: 1rem 3rem;
-  margin: 5rem 7rem;
   -webkit-box-shadow:0px 0px 26px 0px #1b1b1b ;
   -moz-box-shadow:0px 0px 26px 0px #1b1b1b ;
   box-shadow:0px 0px 26px 0px #1b1b1b ;
 
   flex-grow: 1;
   align-self: stretch;
-  
+
+  margin: auto 10vw;
+  height: 90vh;
+  /*border-radius: 1rem;*/
 }
 
 form h1{
@@ -166,8 +167,4 @@ form h2{
   margin-top: 1rem;
   border-radius: 0.5rem;
   padding: 0.3rem 1rem;
-
-  font-family: "Lavishly Yours", cursive;
-  font-weight: 400;
-  font-style: normal;
 }
