--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@ body {
   hsl(346, 69%, 51%) 55%,
   hsl(240deg 100% 20%) 100%
   );
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .main-content{
@@ -20,6 +20,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  z-index: -1;
 }
 
 /*Navbar*/
@@ -33,7 +35,8 @@ nav.navbar{
   -webkit-box-shadow:0px 0px 26px 0px #1b1b1b ;
   -moz-box-shadow:0px 0px 26px 0px #1b1b1b ;
   box-shadow:0px 0px 26px 0px #1b1b1b ;
-  height: 10vh;
+  height: 50px;
+
 }
 
 .nav-link {
@@ -63,21 +66,30 @@ nav.navbar{
   align-items: center;
   justify-content: space-evenly;
   user-select: none;
-  height: 90vh;
+  min-height: 90vh;
+}
+
+@media (width <= 720px) {
+  .login {
+    flex-direction: column;
+  }
+
+  .login form{
+    border-radius: 5vw;
+  }
 }
 
 .login-left{
-  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 5vw 5vw;
 }
 
 .login .pixie{
   color: white;
   font-size: 10rem;
   flex-grow: 1; 
-  align-self: stretch;
   margin: 0;
 }
 
@@ -100,12 +112,9 @@ nav.navbar{
   -moz-box-shadow:0px 0px 26px 0px #1b1b1b ;
   box-shadow:0px 0px 26px 0px #1b1b1b ;
 
-  align-self: stretch;
-
   padding: 0 3vw;
   margin-right: 5vw;
-  height: 90vh;
-  /*border-radius: 1rem;*/
+  min-height: 90vh;
 }
 
 form h1{
