--- a/app/globals.css
+++ b/app/globals.css
@@ -89,8 +89,7 @@ nav.navbar{
 .login .pixie{
   color: white;
   font-size: 10rem;
-  flex-grow: 1; 
-  margin: 0;
+  flex-grow: 1;
 }
 
 .login .intro{
@@ -112,7 +111,10 @@ nav.navbar{
   -moz-box-shadow:0px 0px 26px 0px #1b1b1b ;
   box-shadow:0px 0px 26px 0px #1b1b1b ;
 
-  padding: 0 3vw;
+  padding: 30px 30px;
+
+  /*padding-top: calc((100vh - 90vh) / 2);
+  padding-bottom: calc((100vh - 90vh) / 2);*/
   margin-right: 5vw;
   min-height: 90vh;
 }
@@ -122,7 +124,9 @@ form h1{
   text-align: center;
   padding-bottom: 1rem;
   font-size: x-large;
-  padding-bottom: 0;
+  padding-top: 0px;
+  color: white;
+
 }
 
 form h2{
