--- a/app/globals.css
+++ b/app/globals.css
@@ -112,11 +112,10 @@ nav.navbar{
   box-shadow:0px 0px 26px 0px #1b1b1b ;
 
   padding: 30px 50px;
-
   /*padding-top: calc((100vh - 90vh) / 2);
   padding-bottom: calc((100vh - 90vh) / 2);*/
   margin-right: 5vw;
-  min-height: 90vh;
+  min-height: calc(100vh - 50px);
 }
 
 form h1{
@@ -155,7 +154,7 @@ form h2{
   border-radius: 0.5rem;
   padding: 0.3rem 0.5rem;
   max-width: 400px;
-  width: 20vw;
+  width: 250px;
   font-weight: 400;
 }
 
