--- a/app/globals.css
+++ b/app/globals.css
@@ -188,3 +188,25 @@ form h2{
   background-color: grey;
   height: 100vh;
 }
+
+/*scroll bars*/
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f100;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #88888800;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #55555500;
+}
