--- a/app/globals.css
+++ b/app/globals.css
@@ -224,3 +224,8 @@ form h2{
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
+
+textarea{
+  animation: typing 2s,
+  cursor .4s step-end infinite alternate;
+}
