--- a/app/globals.css
+++ b/app/globals.css
@@ -229,3 +229,12 @@ textarea{
   animation: typing 2s,
   cursor .4s step-end infinite alternate;
 }
+
+.hsl-container{
+  background: linear-gradient(
+    to bottom,
+    hsl(31, 100%, 59%) 0%,
+    hsl(346, 69%, 51%) 50%,
+    hsl(240, 100%, 20%) 100%
+  );
+}
