--- a/app/globals.css
+++ b/app/globals.css
@@ -35,8 +35,8 @@ nav.navbar{
   -webkit-box-shadow:0px 0px 26px 0px #1b1b1b ;
   -moz-box-shadow:0px 0px 26px 0px #1b1b1b ;
   box-shadow:0px 0px 26px 0px #1b1b1b ;
-  height: 50px;
-
+  max-height: 50px;
+  width: 100vw;
 }
 
 .nav-link {
@@ -58,6 +58,24 @@ nav.navbar{
 
 .navbar-links{
   padding: 13px;
+}
+
+@media (width <= 720px) {
+  nav.navbar{
+    overflow-x: scroll;
+    overflow-y: hidden;
+    justify-content: start;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;
+  }
+
+  .pixie{
+    margin-left: 0%;
+  }
+
+  .nav.navbar::-webkit-scrollbar { 
+      display: none;  /* Safari and Chrome */
+  }
 }
 /*Login*/
 
